test/files/neg/xml-comments.scala
object foo {
  val bar = "baz"
  val xml = 
    <root>
      <!---->
      <!-- {bar} --->
    </root>
}
