test/files/neg/xml-comments.check
xml-comments.scala:4: error: To compile XML syntax, the scala.xml package must be on the classpath.
Please see https://github.com/scala/scala-xml for details.
    <root>
    ^
one error found
